# WinProjects

3Part/: 说明.txt
3Part/EncDec/: EncDec.cpp  EncDec.h  EncDec.vcproj  ReadMe.txt  blowfish.cpp  blowfish.h  md5c.cpp  md5c.h  md5ex.cpp  md5ex.h  mycast.cpp  mycast.h  mydes.cpp  mydes.h  myidea.cpp  myidea.h  myrc5.cpp  myrc5.h
3Part/crypt/: EncDec.h  EncDec.lib  EncDec_d.lib
3Part/loki/: loki.lib  loki015.lib  loki015_d.lib  loki_D.lib  loki_s.lib
3Part/tinyxml/: tinyxml.vcproj
3Part/utility/: ajaxhelper.h  allcast.h  iinterface.h  publicfun.cpp  publicfun.h  stringfun.h  taskscheduler.h
3Part/wtl/: atlapp.h  atlapp1.h  atlwfile.h
3Part/xmlparse/: libexpat.lib  libxmlnode.h  libxmlnode.lib  tinyxml.lib  tinyxmld.lib
3Part/zlib-1.2.3/: ReadMe.txt  gzio.c  trees.c  zlib-1.2.3.vcproj
EvenServer/RanaSrv/: Doxyfile  Makefile.am  RanaClient.cpp  RanaScriptManager.cpp  RanaService.cpp  RanaServicesStrategy.cpp  RanaSrv(noservice).vcproj  RanaSrv.Net.Servie.vcproj  RanaSrv.Net.Servie.vcxproj  RanaSrv.sln  RanaSrv.vcproj  RanaSrv.vcxproj  RanaSrv_vs9.Multi.vcproj  build.bat
EvenServer/RanaSrv/command/: Cmd_Rana.cpp
EvenServer/RanaSrv/include/: AccessMask.h  RanaClient.h  RanaScriptManager.h  RanaService.h  RanaServicesStrategy.h
EvenServer/RanaSrv/protocol/: GameProto_Login.h
EvenServer/RanaSrv/protocol/source/: Proto_Rana.xml  fixed_cmd_def.py  hostType.py
EvenServer/Zoic/: CheckRunTime.cpp  ClassDiagram1.cd  Clock.cpp  CommandFactory.cpp  Config.cpp  Connection.cpp  DateTime.cpp  Doxyfile  Exception.cpp  FdSet.cpp  Log.cpp  Makefile.am  Message.cpp  MessageImpl.cpp  MessageTransfer.cpp  MissingFunction.cpp  NetLog.cpp  NormalQuery.cpp  NormalRecordset.cpp  ParameterValue.cpp  ProtocolVersion.cpp  Query.cpp  Random.cpp  Recordset.cpp  RunTimeMonitor.cpp  Selectable.cpp  Selector.cpp  Service.cpp  Session.cpp  SessionBank.cpp  SessionC.cpp  SessionS.cpp  SharedBufferControl.cpp  SharedBufferReader.cpp  SharedBufferWriter.cpp  Signal.cpp  SplitString.cpp  StmtQuery.cpp  StmtRecordset.cpp  SysModuleRegister.cpp  (+12 more)
EvenServer/Zoic/include/: Binary.h  Bond.h  CheckRunTime.h  ClassStorage.h  Clock.h  CommandFactory.h  Config.h  ConfigDeclare.h  ConfigImplement.h  Connection.h  ConstCast.h  Counter.h  DataBuffer.h  DataHolder.h  DataImage.h  DataLoader.h  DataReader.h  DateTime.h  Exception.h  FdSet.h  FixArray.h  Log.h  Message.h  MessageImpl.h  MessageTransfer.h  MissingFunction.h  Module.h  NetLog.h  NoCopy.h  NormalQuery.h  NormalRecordset.h  OutOfBoundException.h  ParameterValue.h  ProtocolVersion.h  ProtocolVersionException.h  Query.h  QueryDefine.h  Random.h  Recordset.h  RetFalse.h  (+33 more)
EvenServer/Zoic/logger/: appender.cpp  appender.h  bufferappender.cpp  bufferappender.h  consoleappender.cpp  consoleappender.h  extendfileappender.cpp  extendfileappender.h  fileappender.cpp  fileappender.h  logcontent.cpp  logcontent.h  logger.cpp  logger.h  loggerappenderstorage.cpp  loggerappenderstorage.h  loggerbufferwriter.cpp  loggerbufferwriter.h  loggerstrategy.cpp  loggerstrategy.h  loglevel.cpp  loglevel.h  logmonitorsender.cpp  logmonitorsender.h  logstatusstrategy.cpp  logstatusstrategy.h  logtargetdescription.cpp  logtargetdescription.h
EvenServer/Zoic/mysql/include/: config-win.h  my_config.h  my_global.h  my_pthread.h  myisam.h  mysql_version.h
EvenServer/Zoic/mysql/libmysql/: Makefile.am  client.c  mf_tempfile.c  my_open.c  my_pthread.c  password.c  safemalloc.c
EvenServer/Zoic/zlib/: Makefile.am  zconf.h  zutil.h
EvenServer/common/: CommonMessageStream.h  CommonTypes.h  RanaCommonSolution.h
EvenServer/extended/: CompileTimeExtension.h
EvenServer/extended1/: BaseTypes.h  BatchAction.h  BinaryHeap.h  BinaryHeapWithIterator.h  ComponentCarrier.h  (+26 more)
EvenServer/rana/: Doxyfile  Makefile.am  RanaContext.h  RanaEvent.cpp  RanaEvent.h  RanaFeedback.h  RanaHeader.cpp  RanaHeader.h  RanaInputArgumentException.cpp  RanaInputArgumentException.h  RanaInputStack.h  RanaMessage.cpp  RanaMessage.h  RanaPush.h  RanaSortLable.h  RanaSpace.cpp  RanaSpace.h  RanaSpaceBank.cpp  RanaSpaceBank.h  RanaTimeEvent.cpp  RanaTimeEvent.h  RanaTimeMessage.cpp  RanaTimeMessage.h  RanaTimer.cpp  RanaTimer.h  RanaTimerBank.cpp  RanaTimerBank.h  RanaTrigger.cpp  RanaTrigger.h  RanaTriggerBank.cpp  RanaTriggerBank.h  RanaTriggerStat.cpp  RanaTriggerStat.h  build.bat  config-win.h  rana.Net.Multi.vcproj  rana.Net.Multi.vcxproj  rana.sln  rana.vcproj  rana.vcxproj  (+1 more)
EvenServer/rana/lua/: Makefile.am
EvenServer/rana/lua/src/: lauxlib.h
EvenServer/rana/trigger/: Message.h  SortLable.h  SpaceAction.cpp  SpaceAction.h  SpaceEvent.cpp  SpaceEvent.h  SpaceEventMap.cpp  SpaceEventMap.h  TriggerHeader.h  TriggerSpace.cpp  TriggerSpace.h
GTServerClient/: GtCenter.sln
GTServiceVS2008/: GtCenter.sln  说明.txt
LuaTest/: LuaTest.sln
MFCGamePlay/: MFCGamePlay.sln
MFCGameServer/: MFCGameServer.sln
PngBkTemplate/: PngBkTemplate.sln
treelistcode/: MainFrm.cpp  MainFrm.h  NewTreeListCtrl.clw  NewTreeListCtrl.cpp  NewTreeListCtrl.dsp  NewTreeListCtrl.dsw  NewTreeListCtrl.h  NewTreeListCtrl.rc  NewTreeListCtrl.sln  NewTreeListCtrl.vcproj  NewTreeListCtrlDoc.cpp  NewTreeListCtrlDoc.h  NewTreeListCtrlView.cpp  NewTreeListCtrlView.h  StdAfx.cpp  StdAfx.h  TreeListCtrl.cpp  TreeListCtrl.h  TreeListHeaderCtrl.cpp  TreeListHeaderCtrl.h  TreeToolTipCtrl.cpp  TreeToolTipCtrl.h  resource.h
(+278 files in other folders)
