SRC = \
	MissingFunction.cpp \
	Service.cpp \
	Session.cpp \
	SessionC.cpp \
	SessionS.cpp \
	SessionBank.cpp \
	Message.cpp \
	MessageImpl.cpp \
	MessageTransfer.cpp \
	Exception.cpp \
	CommandFactory.cpp \
	SysPing.cpp \
	Signal.cpp \
	SysModuleRegister.cpp \
	Clock.cpp \
	Connection.cpp \
	Query.cpp \
	NormalQuery.cpp \
	StmtQuery.cpp \
	Recordset.cpp \
	NormalRecordset.cpp \
	StmtRecordset.cpp \
	SplitString.cpp \
	DateTime.cpp \
	ParameterValue.cpp \
	Log.cpp \
	Config.cpp \
	ProtocolVersion.cpp \
	NetLog.cpp \
	CheckRunTime.cpp \
	Random.cpp \
	VectorMessage.cpp \
	WorkFlow.cpp \
	TinyBinary.cpp \
	FdSet.cpp \
	Selectable.cpp \
	Selector.cpp \
	RunTimeMonitor.cpp \
	SharedBufferControl.cpp \
	SharedBufferReader.cpp \
	SharedBufferWriter.cpp \
	UString.cpp \
	logger/appender.cpp \
	logger/bufferappender.cpp \
	logger/consoleappender.cpp \
	logger/fileappender.cpp \
	logger/extendfileappender.cpp \
	logger/logcontent.cpp \
	logger/logger.cpp \
	logger/loggerappenderstorage.cpp \
	logger/loggerbufferwriter.cpp \
	logger/loggerstrategy.cpp \
	logger/logstatusstrategy.cpp \
	logger/loglevel.cpp \
	logger/logtargetdescription.cpp \
	logger/logmonitorsender.cpp

INCLUDES = -I$(SQLINCLUDE)

LIB = $(ZOICLIBDIR)/lib$(ZOICLIBNAME).a

noinst_LIBRARIES = $(LIB)

__ZOICLIBDIR__lib__ZOICLIBNAME__a_SOURCES = $(SRC)

