SRC = \
	trigger/TriggerSpace.cpp \
	trigger/SpaceEvent.cpp \
	trigger/SpaceAction.cpp \
	trigger/SpaceEventMap.cpp \
	RanaEvent.cpp \
	RanaHeader.cpp \
	RanaMessage.cpp \
	RanaSpace.cpp \
	RanaSpaceBank.cpp \
	RanaTimeEvent.cpp \
	RanaTimeMessage.cpp \
	RanaTimer.cpp \
	RanaTimerBank.cpp \
	RanaTrigger.cpp \
	RanaTriggerBank.cpp \
	RanaTriggerStat.cpp \
	RanaInputArgumentException.cpp

INCLUDES = -I$(LUAINCLUDE)

LIB = $(RANALIBDIR)/lib$(RANALIBNAME).a

noinst_LIBRARIES = $(LIB)

__RANALIBDIR__lib__RANALIBNAME__a_SOURCES = $(SRC)
