SRC = \
	src/lapi.c \
	src/lcode.c \
	src/ldebug.c \
	src/ldo.c \
	src/ldump.c \
	src/lfunc.c \
	src/lgc.c \
	src/llex.c \
	src/lmem.c \
	src/lobject.c \
	src/lopcodes.c \
	src/lparser.c \
	src/lstate.c \
	src/lstring.c \
	src/ltable.c \
	src/ltm.c \
	src/lundump.c \
	src/lvm.c \
	src/lzio.c \
	src/lauxlib.c \
	src/lbaselib.c \
	src/ldblib.c \
	src/liolib.c \
	src/lmathlib.c \
	src/loadlib.c \
	src/lstrlib.c \
	src/ltablib.c \
	src/print.c \
	src/loslib.c \
	src/linit.c

INCLUDES = -I$(LUAINCLUDE)

LIB = $(LUALIBDIR)/lib$(LUALIBNAME).a

noinst_LIBRARIES = $(LIB)

__LUALIBDIR__lib__LUALIBNAME__a_SOURCES = $(SRC)
